fix overflow

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -28,16 +28,25 @@ body {
       #d7dbd7 100vh)
 }
 
-#backgroundPageGreen {
-  background-color: ;
-  height: 20vh;
-}
-
 /* Dimensioni app */
 
 #app {
   width: 100vw;
   max-height: 100vh;
+  min-width: 1000px;
+  min-height: 700px;
+}
+
+.col-chats {
+  width: 35%;
+  max-height: 100%;
+  min-height: 100%;
+}
+
+.col-main-chat {
+  width: 65%;
+  max-height: 100%;
+  min-height: 100%;
 }
 
 /* MY PROFILE */
@@ -78,7 +87,9 @@ body {
 /* CHATS */
 #chatSelection {
   background-color: #ffffff;
-  /* max-height: 80vh; */
+  max-height: 66vh;
+  min-height: 66vh;
+  overflow: auto;
 }
 
 .chatActiveList {
@@ -106,6 +117,8 @@ body {
 #currentChat {
   width: 100%;
   height: 100vh;
+  height: 79vh;
+  overflow: auto;
   background-image: url("../img/mine.jpg");
   border: 1px solid #b1b1b1;
 }
